fix: fix z-index

--- a/src/components/ExitConfirmation/ExitConfirmation.module.css
+++ b/src/components/ExitConfirmation/ExitConfirmation.module.css
@@ -25,7 +25,7 @@
     padding: var(--space-l);
     gap: var(--space-xl);
     background-color: var(--on-surface-color);
-    z-index: var(--bottom-modal-container-index);
+    z-index: var(--exit-confirmation-container-index);
     animation: showFade 0.3s ease-in;
 }
 
