--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -54,9 +54,9 @@
     --border-radius-m: 16px;
 
     --exit-confirmation-container-index: 10000;
+    --exit-confirmation-blur-index: 9000;
     --bottom-buttons-index: 2000;
     --bottom-modal-container-index: 1000;
-    --exit-confirmation-blur-index: 900;
     --webcamera-index: 200;
     --select-entity-number-index: 100;
 }
